--- a/inst/pkgdown/templates/head.html
+++ b/inst/pkgdown/templates/head.html
@@ -25,6 +25,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="{{#site}}{{root}}{{/site}}apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="{{#site}}{{root}}{{/site}}favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="{{#site}}{{root}}{{/site}}favicon-16x16.png">
+    <link rel="icon" href="{{#site}}{{root}}{{/site}}assets/images/UOSSheild_Primary_Violet_RGB.ico" sizes="any">
+    <link rel="icon" href="{{#site}}{{root}}{{/site}}assets/images/UOSSheild_Primary_Violet_RGB.svg" type="image/svg+xml">
     <link rel="manifest" href="{{#site}}{{root}}{{/site}}site.webmanifest">
     <link rel="mask-icon" href="{{#site}}{{root}}{{/site}}safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
