--- a/inst/pkgdown/templates/footer.html
+++ b/inst/pkgdown/templates/footer.html
@@ -4,9 +4,9 @@
         <a href="https://docs.hpc.shef.ac.uk/en/latest/stanage/index.html">
           <img alt="Stanage HPC" src="https://docs.hpc.shef.ac.uk/en/latest/_images/Stanage_Black.png" style="width: 100%;">
         </a>
+        <p><a href="https://sites.google.com/sheffield.ac.uk/research-training/research-training">Research Computing Training Home</a></p>
 			</div>
 			<div class="col-md-5">
-        <p><a href="https://sites.google.com/sheffield.ac.uk/research-training/research-training">Research Computing Training Home</a></p>
         <p>Lesson developed by <a href="https://rse.shef.ac.uk">RSE</a> &amp; <a href="https://www.sheffield.ac.uk/it-services/research">RIT</a></p>
         {{#yaml}}
         <p>
@@ -24,8 +24,9 @@
         {{/yaml}}
         | <a href="{{#yaml}}{{source}}/blob/{{branch}}/{{/yaml}}CONTRIBUTING.md">{{ translate.Contributing }}</a> 
         | <a href="{{#yaml}}{{source}}/{{/yaml}}">{{ translate.Source }}</a></p>
-				<p><a href="{{#yaml}}{{source}}/blob/{{branch}}/{{/yaml}}CITATION">{{ translate.Cite }}</a> | <a href="mailto:{{#yaml}}{{contact}}{{/yaml}}">{{ translate.Contact }}</a> | <a href="https://carpentries.org/about/">{{ translate.About }}</a>{{# translate.ThisLessonCoC }} | {{& translate.ThisLessonCoC }}{{/ translate.ThisLessonCoC }}</p>
-			</div>
+				<p><a href="{{#yaml}}{{source}}/blob/{{branch}}/{{/yaml}}CITATION">{{ translate.Cite }}</a> | <a href="mailto:{{#yaml}}{{contact}}{{/yaml}}">{{ translate.Contact }}</a> | <a href="https://carpentries.org/about/">{{ translate.About }}</a></p>
+        {{# translate.ThisLessonCoC }}<p>{{& translate.ThisLessonCoC }}</p>{{/ translate.ThisLessonCoC }}
+      </div>
 			<div class="col-md-5">
         {{#yaml}}{{#license}}
         <p>{{& translate.MaterialsLicensedUnder }}</p>
