Concatenate long lines so white space is correct

--- a/inst/pkgdown/templates/footer.html
+++ b/inst/pkgdown/templates/footer.html
@@ -26,10 +26,7 @@
         | <a href="{{#yaml}}{{source}}/{{/yaml}}">{{ translate.Source }}</a>
         </p>
 		<p>
-          <a href="{{#yaml}}{{source}}/blob/{{branch}}/{{/yaml}}{{citation}}">{{ translate.Cite }}</a> 
-	  | <a href="mailto:{{#yaml}}{{contact}}{{/yaml}}">{{ translate.Contact }}</a> 
-          | <a href="https://carpentries.org/about/">{{ translate.About }}</a> 
-          | <a href="CODE_OF_CONDUCT.html">{{ translate.CoC }}</a>
+          <a href="{{#yaml}}{{source}}/blob/{{branch}}/{{/yaml}}{{citation}}">{{ translate.Cite }}</a> | <a href="mailto:{{#yaml}}{{contact}}{{/yaml}}">{{ translate.Contact }}</a> | <a href="https://carpentries.org/about/">{{ translate.About }}</a> | <a href="CODE_OF_CONDUCT.html">{{ translate.CoC }}</a>
         </p>
 		</div>
 		<div class="col-md-5">
