Configure branded logos for dark mode (I have now enabled GHA to automatically compile the css if changed, this may make rebasing from upstream a weird affair)

--- a/inst/pkgdown/templates/footer.html
+++ b/inst/pkgdown/templates/footer.html
@@ -2,7 +2,7 @@
 			<hr/>
 			<div class="col-md-2">
         <a href="https://docs.hpc.shef.ac.uk/en/latest/stanage/index.html">
-          <img alt="Stanage HPC" src="https://docs.hpc.shef.ac.uk/en/latest/_images/Stanage_Black.png" style="width: 100%;">
+          <img alt="Stanage HPC" src="https://docs.hpc.shef.ac.uk/en/latest/_images/Stanage_Black.png" style="width: 100%;" class="dark-invert">
         </a>
         <p><a href="https://sites.google.com/sheffield.ac.uk/research-training/research-training">Research Computing Training Home</a></p>
 			</div>
